# tkd_registration_backend

./: .gitignore  .safety-project.ini  Dockerfile  README.md  add_manual_entries.py  dev_requirements.txt  dev_requirments.txt  fix_entries.py  fix_school_names.py  generate_badge.py  justfile  okcc.yml  process_entries.py  process_entry.py  pyproject.toml  regen_badges.py  requirements.txt  sync_aws_gdrive.py  zappa_settings.json
.github/workflows/: main.yml
envs/: okcc.yml  okgp.yml  test.yml
scripts/: archive_reg_db.py  generate_all_badges.py  generate_all_badges_okc.py  generate_schedule.py  load_lookup_db.py  regen_badges.py
tests/: cleanup_test_entry.py  input.json  test_backend_scripts.py
