[project]
name = "tkd-registration-backend"
version = "0.1.0"
description = "Backend for the TKD Registration Pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3~=1.35.0",
    "google-api-python-client>=2.115.0",
    "requests>=2.32.2",
    "stripe~=10.10.0",
    "urllib3~=1.0",
    "zappa~=0.59.0",
    "zipp>=3.19.1",
]

[tool.uv]
dev-dependencies = [
    "gspread~=6.1",
    "oauth2client~=4.1",
    "pillow==10.4.0",
    "pytest~=8.0.0",
    "python-dotenv~=1.0",
    "ruff~=0.6.5",
    "setuptools==74.1.2",
]
